maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:3: error: not found: value random3
	while(!estSurBiscuit){ random3() match{
                               ^